@@ -3,6 +3,10 @@ X3 ChangeLog
 
 2007-02-11  Alex Schumann  <rubin@afternet.org>
 
+	* src/nickserv.c: fixed a bunch of ldap result value check bugs
+
+2007-02-11  Alex Schumann  <rubin@afternet.org>
+
 	* src/opserv.c: Added oper group support to ldap
 
 	* src/x3ldap.c: Added group support to ldap. Fixed set email bug
